update logging config